<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.example</groupId>
    <artifactId>RestAssuredAPI</artifactId>
    <version>1.0-SNAPSHOT</version>

    <properties>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>
    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.8.0</version>
                    <configuration>
                        <source>17</source>
                        <target>17</target>
                    </configuration>
                </plugin>

                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>3.0.0-M5</version>
                    <configuration>
                        <argLine>--enable-preview</argLine>
                        <forkCount>1</forkCount>
                        <reuseForks>true</reuseForks>
                        <systemPropertyVariables>
                            <java.util.logging.manager>org.apache.logging.log4j.jul.LogManager</java.util.logging.manager>
                        </systemPropertyVariables>
                        <workingDirectory>${project.build.directory}</workingDirectory>
                        <excludes combine.self="override">
                            <exclude>**/*IT.java</exclude>
                        </excludes>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

    <dependencies>
        <!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
        <dependency>
            <groupId>commons-io</groupId>
            <artifactId>commons-io</artifactId>
            <version>2.11.0</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
        <dependency>
            <groupId>mysql</groupId>
            <artifactId>mysql-connector-java</artifactId>
            <version>8.0.33</version>
        </dependency>

        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-exec</artifactId>
            <version>1.3</version>
        </dependency>


        <dependency>
            <groupId>io.rest-assured</groupId>
            <artifactId>json-schema-validator</artifactId>
            <version>3.0.0</version>
        </dependency>
        <dependency>
            <groupId>org.hamcrest</groupId>
            <artifactId>hamcrest-all</artifactId>
            <version>1.3</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>io.rest-assured</groupId>
            <artifactId>rest-assured</artifactId>
            <version>3.3.0</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.testng</groupId>
            <artifactId>testng</artifactId>
            <version>6.10</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.json</groupId>
            <artifactId>json</artifactId>
            <version>20160212</version>
        </dependency>
        <dependency>
            <groupId>com.googlecode.json-simple</groupId>
            <artifactId>json-simple</artifactId>
            <version>1.1.1</version>
        </dependency>
        <dependency>
            <groupId>com.google.code.gson</groupId>
            <artifactId>gson</artifactId>
            <version>2.8.6</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java -->
        <dependency>
            <groupId>org.seleniumhq.selenium</groupId>
            <artifactId>selenium-java</artifactId>
            <version>4.9.0</version>
        </dependency>
        <dependency>
            <groupId>org.seleniumhq.selenium</groupId>
            <artifactId>selenium-api</artifactId>
            <version>4.9.0</version>
        </dependency>
        <dependency>
            <groupId>io.github.bonigarcia</groupId>
            <artifactId>webdrivermanager</artifactId>
            <version>5.3.2</version>
        </dependency>
        <dependency>
            <groupId>io.testsmith</groupId>
            <artifactId>webdriver-testng-archetype</artifactId>
            <version>1.4.4</version>
        </dependency>
        <dependency>
            <groupId>io.github.bonigarcia</groupId>
            <artifactId>webdrivermanager</artifactId>
            <version>5.3.2</version>
        </dependency>
        <dependency>
            <groupId>io.github.bonigarcia</groupId>
            <artifactId>webdrivermanager</artifactId>
            <version>5.3.2</version>
        </dependency>
        <dependency>
            <groupId>ru.sbtqa</groupId>
            <artifactId>webdrivermanager</artifactId>
            <version>2.3.0</version>
        </dependency>
        <dependency>
            <groupId>ru.sbtqa</groupId>
            <artifactId>webdrivermanager</artifactId>
            <version>2.3.0</version>
        </dependency>
        <dependency>
            <groupId>cz.cvut.fel.still</groupId>
            <artifactId>selenium-starter-kit</artifactId>
            <version>1.0.0</version>
        </dependency>
        <dependency>
            <groupId>cz.cvut.fel.still</groupId>
            <artifactId>selenium-starter-kit</artifactId>
            <version>1.0.0</version>
        </dependency>
        <dependency>
            <groupId>cz.cvut.fel.still</groupId>
            <artifactId>selenium-starter-kit</artifactId>
            <version>1.0.0</version>
        </dependency>
        <dependency>
            <groupId>cz.cvut.fel.still</groupId>
            <artifactId>selenium-starter-kit</artifactId>
            <version>1.0.0</version>
        </dependency>
        <dependency>
            <groupId>io.testsmith</groupId>
            <artifactId>webdriver-testng-archetype</artifactId>
            <version>1.4.4</version>
        </dependency>
        <dependency>
            <groupId>io.testsmith</groupId>
            <artifactId>webdriver-testng-archetype</artifactId>
            <version>1.4.4</version>
        </dependency>
        <dependency>
            <groupId>io.testsmith</groupId>
            <artifactId>webdriver-testng-archetype</artifactId>
            <version>1.4.4</version>
        </dependency>
    </dependencies>
</project>